# python_Days

./: README.md
python_00/ex2/: ft_harvest_total.py
python_00/ex4/: ft_water_reminder.py
python_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
python_00/ex6/: ft_garden_summary.py
python_00/ex7/: ft_seed_inventory.py
python_01/: README.md
python_01/ex0/: ft_garden_intro.py
python_01/ex1/: README.md  ft_garden_data.py
python_01/ex2/: README.md  ft_plant_growth.py
python_01/ex3/: README.md  ft_plant_factory.py
python_01/ex4/: README.md  ft_garden_security.py
python_01/ex5/: README.md  ft_plant_types.py
python_01/ex6/: README.md  ft_garden_analytics.py
python_02/: README.md  ft_first_exception.py
python_02/ex0/: README.md  ft_first_exception.py
python_02/ex1/: README.md  ft_different_errors.py
python_02/ex2/: README.md  ft_custom_errors.py
python_02/ex3/: README.md  ft_finally_block.py
python_02/ex4/: README.md  ft_finally_block.py  ft_raise_errors.py
python_02/ex5/: README.md  ft_garden_management.py
python_03/ex0/: ft_command_quest.py
python_03/ex1/: ft_score_analytics.py
python_03/ex2/: ft_achievement_tracker.py  ft_coordinate_system.py
python_03/ex3/: ft_achievement_tracker.py
python_03/ex4/: ft_inventory_system.py
python_03/ex5/: ft_data_stream.py
python_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py  startpy06.py
python_07/: battle.py  capacitor.py  tournament.py
python_08/ex1/: loading.py  pyproject.toml  requirements.txt
(+42 files in other folders)
