[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "ilSyAbRi",email = "iliasssyabri1@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy (==1.25.0)",
    "requests (==2.31.0)",
    "matplotlib (==3.7.2)",
    "pandas (==2.1.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = true
